- 'eq slots' displays list of slotnames
  'eq slotname item' will try to equip item in slotname
- Fractional weight in inventory is now displayed.
- Show proper SP for all skills (auto-detected).
- Improved storage list, sorts the items by category like the real client.
- Emotion command now uses the real commands from the RO client.
  Example: e thx
- _whenWater should work now?
- When casting the Teleport skill, openkore will wait for the skill to
  be successfuly cast before actually teleporting, unless this is an
  emergency teleport (e.g. teleportAuto_deadly). (Looks less bot-like.)
  Be sure to update timeouts.txt to get ai_teleport_retry and
  ai_teleport_delay.
- Shop prices are now formatted with thousands separators.
- The 'vender' command now shows vender's name and index.
- Support "That person is in another deal." error.
- 'pl' command now displays everyone's level.
- tables/skills.txt: updated for almost all advanced class skills now.
- New "<player> got married!" message.
- Taekwon, Star Gladiator, Flying Star Gladiator and Soul Linker jobs
  are now recognized.

New commands:
- getplayerinfo (number)
  Ask the server for the name of the object with that ID. You will not
  see the reply unless you have debug level 2.
- storage addfromcart <cart_item> [<amount>]
  storage gettocart <storage_item> [<amount>]
  Support for adding/getting items directly to/from merchant cart
- storage [<eq|u|nu>]
  Only list equipments (eq), usable (u), or non usable (nu) items.
- whoami
  Displays your character and account ID.
- damage
  Displays the monsters and skills that damaged you.
- help [command]
  not new but updated and more usefull
  you get now all options for a specific command
- guild break <guild name>
  Disband your guild.
- guild create <name>
  Create a guild.
- guild kick <list number> <reason>
  Kick a guild member out of the guild.

New config options:
- partySkill: target_dist (range)
  This is the same as target_dist for attackSkillSlot.